# picked-off

./: .gitignore  DESIGN.md  LICENSE  README.md  REPORT2.md  REPORT3.md  REPORT4-deploy.md  REPORT4.md  REPORT5.md  REPORT6.md  REPORT7.md  vercel.json
docs/: render_replay_gif.py
notebooks/: README.md  gate_results.csv  gate_results.py  human_vs_bot.ipynb
sessions/: picked-off-L1-605045-1781279600424.json  picked-off-L5-1037333-1781295309277.json  picked-off-L5-1038342-1781280304470.json
sim/: pyproject.toml
sim/picked_off/: __init__.py  engine.py  events.py  gate.py  generator.py  params.py  scoring.py  vectors.py
sim/picked_off/bots/: __init__.py  base.py  bot0.py  bot1.py  bot2.py
sim/tests/: test_bots.py  test_engine.py  test_gate.py  test_generator.py  test_identity.py  test_vectors.py
vectors/: SCHEMA.md  declines_only.json  empty_round.json  hand_verified_mixed.json  informed_only.json  jump_heavy.json  kitchen_sink.json  long_round_trip.json  markout_clamp.json  negative_inventory.json  noise_only.json  quote_changes_mid_round.json  smoke_two_arrivals.json
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/public/streams/: L1-600000.json  L1-601009.json  L1-602018.json  L1-603027.json  L1-604036.json  L1-605045.json  L1-606054.json  L1-607063.json  L1-608072.json  L1-609081.json  L1-610090.json  L1-611099.json  L1-612108.json  L1-613117.json  L1-614126.json  L1-615135.json  L1-616144.json  (+185 more)
web/scripts/: build_stream_pool.py  build_tutorial_stream.py
web/src/: App.tsx  index.css  router.ts
writeup/: README.md  writeup.md
(+16 files in other folders)
