[project]
name = "picked-off-sim"
version = "0.1.0"
description = "Glosten-Milgrom market-making simulator: the canonical engine for the Picked Off game (see ../DESIGN.md)."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["picked_off*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
